[gd_scene load_steps=12 format=3 uid="uid://frirnjibo006"]

[ext_resource type="Script" uid="uid://spiot67lbx3m" path="res://entity.gd" id="1_6e8rh"]
[ext_resource type="Resource" uid="uid://ctii3skcnpuj1" path="res://entity/mobs/pig.tres" id="2_nwmpt"]
[ext_resource type="Texture2D" uid="uid://c61kf606wwdur" path="res://resorce/charater/walk.png" id="3_03rkj"]
[ext_resource type="Script" uid="uid://brfy7of1xdbgk" path="res://entity_sprite.gd" id="4_03rkj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_l2lw7"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_l2lw7"]
height = 0.16992188
radius = 1.123

[sub_resource type="BoxShape3D" id="BoxShape3D_pixel"]
size = Vector3(0.16, 0.16, 0.01)

[sub_resource type="SphereShape3D" id="SphereShape3D_03rkj"]
radius = 0.074639894

[sub_resource type="Animation" id="Animation_pimh3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.06, 0)]
}

[sub_resource type="Animation" id="Animation_03rkj"]
resource_name = "attack"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(2.2191381, 4.92458, 1),
"update": 0,
"values": [Vector3(0, 0.06, 0), Vector3(0, 0.5, 0), Vector3(0, 0.06, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6tppj"]
_data = {
&"RESET": SubResource("Animation_pimh3"),
&"attack": SubResource("Animation_03rkj")
}

[node name="entity" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.06, 0)
collision_layer = 32
collision_mask = 131
collision_priority = 0.1
input_ray_pickable = false
script = ExtResource("1_6e8rh")
drop_range_min = 0.05
drop_range_max = 0.1
arc_height_min = 0.05
arc_height_max = 0.1
thing = ExtResource("2_nwmpt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_l2lw7")

[node name="recog" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 512

[node name="CollisionShape3D" type="CollisionShape3D" parent="recog"]
shape = SubResource("CylinderShape3D_l2lw7")

[node name="att_cool" type="Timer" parent="."]
one_shot = true

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.06, 0)
billboard = 1
texture_filter = 0
texture = ExtResource("3_03rkj")
hframes = 8
vframes = 3
script = ExtResource("4_03rkj")

[node name="body" type="Area3D" parent="Sprite3D"]
collision_layer = 8192
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sprite3D/body"]
shape = SubResource("BoxShape3D_pixel")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[node name="attack_area" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 8832

[node name="CollisionShape3D" type="CollisionShape3D" parent="attack_area"]
shape = SubResource("SphereShape3D_03rkj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6tppj")
}

[node name="reloading" type="Timer" parent="."]
one_shot = true

[node name="charater_scan" type="RayCast3D" parent="."]
enabled = true
collision_mask = 12288

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="area_entered" from="recog" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="recog" to="." method="_on_area_3d_area_exited"]
[connection signal="area_entered" from="attack_area" to="." method="_on_attack_area_area_entered"]
[connection signal="area_exited" from="attack_area" to="." method="_on_attack_area_area_exited"]
[connection signal="timeout" from="reloading" to="." method="_on_reloading_timeout"]
